# ChangeLog for x11-terms/roxterm
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-terms/roxterm/ChangeLog,v 1.48 2011/10/14 20:49:24 ssuominen Exp $

*roxterm-2.2.2 (14 Oct 2011)

  14 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> +roxterm-2.2.2.ebuild:
  Version bump.

*roxterm-2.2.1 (29 Sep 2011)

  29 Sep 2011; Samuli Suominen <ssuominen@gentoo.org> +roxterm-2.2.1.ebuild:
  Version bump.

  12 Sep 2011; Samuli Suominen <ssuominen@gentoo.org>
  -files/roxterm-1.16.3-docdir.patch, -files/roxterm-1.18.5-docdir.patch,
  -roxterm-1.16.3.ebuild, -roxterm-1.18.5.ebuild:
  [This is a placeholder. Please ignore.]

  12 Sep 2011; Samuli Suominen <ssuominen@gentoo.org> roxterm-1.22.2.ebuild:
  ppc/x86 stable wrt #382303

  09 Sep 2011; Tony Vroon <chainsaw@gentoo.org> roxterm-1.22.2.ebuild:
  Marked stable on AMD64 based on arch testing by Elijah "Armageddon" El
  Lazkani & Agostino "ago" Sarubbo in bug #382303 filed by Samuli Suominen.

*roxterm-2.1.1 (08 Sep 2011)

  08 Sep 2011; Samuli Suominen <ssuominen@gentoo.org> +roxterm-2.1.1.ebuild:
  Version bump.

*roxterm-1.22.2 (09 Jul 2011)

  09 Jul 2011; Samuli Suominen <ssuominen@gentoo.org> +roxterm-1.22.2.ebuild:
  Version bump wrt #358603 by Pouya K.

  23 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> roxterm-1.16.3.ebuild,
  roxterm-1.18.5.ebuild:
  Use SLOT dependencies for x11-libs/gtk+ and x11-libs/vte.

  13 Aug 2010; Joseph Jezak <josejx@gentoo.org> roxterm-1.16.3.ebuild:
  Marked ppc stable for bug #330075.

  31 Jul 2010; Markos Chandras <hwoarang@gentoo.org> roxterm-1.16.3.ebuild:
  Stable on amd64 wrt bug #330075

  27 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  roxterm-1.16.3.ebuild:
  stable x86, bug 330075

*roxterm-1.18.5 (27 Jul 2010)

  27 Jul 2010; Jim Ramsay <lack@gentoo.org> +roxterm-1.18.5.ebuild,
  +files/roxterm-1.18.5-docdir.patch:
  Version bump: 1.18.5 is released
