@@ -1,6 +1,10 @@
 # ChangeLog for x11-terms/roxterm
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/roxterm/ChangeLog,v 1.48 2011/10/14 20:49:24 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/roxterm/ChangeLog,v 1.49 2011/10/14 20:50:15 ssuominen Exp $
+
+  14 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> -roxterm-2.1.1.ebuild,
+  -roxterm-2.2.1.ebuild:
+  old
 
 *roxterm-2.2.2 (14 Oct 2011)
 
